# BatchRenamer

./: .gitignore  CMakeLists.txt  Core.cpp  Core.h  README.md  enums.h  main.cpp  resources.qrc
Core/: find_and_replace.cpp  find_and_replace.h  number.cpp  number.h  set_extension.cpp  set_extension.h
Widgets/: AddOrRemove.cpp  AddOrRemove.h  BatchRenamer.cpp  BatchRenamer.h  Pallet.hpp  Spacer.cpp  Spacer.h  brFindAndReplace.cpp  brFindAndReplace.h  brNumber.cpp  brNumber.h  brRemoveText.cpp  brRemoveText.h  brSetExtension.cpp  brSetExtension.h  brToolBar.cpp  brToolBar.h
i18n/: br_fr_FR.ts  br_zh_CN.ts  br_zh_TW.ts
